--- a/styles/security.css
+++ b/styles/security.css
@@ -23,10 +23,17 @@
     align-items: center;
 }
 
-#container header .user button{
-    margin: 1rem;
+#container header .user a#button{
+    font: 500 1.6rem Poppins;
+    color: black;
+    font-size: 12pt;
+    text-decoration: none;
+    border: 1px solid black;
     padding: 5px 10px;
-    border-radius: 10%;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    border-radius: 8px;
+    background-color: #e6e4e4;
     transition: background-color 0.25s ease-out, color 0.25s ease-out;
 	cursor: pointer;
 }
