--- a/styles/main.css
+++ b/styles/main.css
@@ -49,6 +49,18 @@ body, input, button, textarea {
     max-width: 700px;
 }
 
+
+#painel #container div#navegacao a{
+    text-decoration: none;
+    margin-left: 1rem;
+    border: 1px solid black;
+    background-color: #e6e4e4;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: background-color 0.25s ease-out, color 0.25s ease-out;
+    cursor: pointer;
+}
+
 @media(min-width: 700px){
     :root{
         font-size: 62.5%; /*todo os rem vai ser relativo a 10px*/
