--- a/styles/security.css
+++ b/styles/security.css
@@ -89,8 +89,13 @@
     margin-left: 5px;
 }
 
-#container .main .form-cadastro fieldset p select#data{
+#container .main .form-cadastro fieldset#dados label{
+    margin-left: 5px;
+}
+
+#container .main .form-cadastro fieldset#dados select#data{
     padding: 1rem;
+    font: 500 1.6rem Poppins;
 }
 
 #container .main .form-cadastro fieldset p#text-box{
@@ -123,6 +128,7 @@
     padding: 5px;
     border-radius: 5px;
     margin-right: 2rem;
+    cursor: pointer;
 }
 
 #container .main .form-cadastro div#btn-enviar{
